# omar

./: .gitignore  README.md  build_fortran_backend.sh  meson.build  omars.mod  playground.ipynb  pyproject.toml  requirements.txt  speeds.txt
.github/workflows/: build_wheels.yml
OMAR/: fortran_backendmodule.c  omar.py
benchmark/: speeds_find_bases.csv
examples/: limitations.py  spectral_example.ipynb  visualization.py
experiments/: cholesky_complexity.py  regression_speed.py
omar/: __init__.py  backendmodule.c  meson.build  omar.py
omar/tests/: speed_test.py  unit_test.f90  unit_test.py  utils.f90
reference/make/: Makefile  README.txt  earthmain-test.txt  make-clean.bat  make-gcc.bat  make-microsoft.bat  tar-earth.bat
reference/matlab/: README  earth.m  earthmex.c  earthtest.m  mex.xcconfig  trees.txt
reference/matlab/matlab.xcodeproj/: project.pbxproj
reference/matlab/matlab.xcodeproj/project.xcworkspace/xcuserdata/nicolls.xcuserdatad/: UserInterfaceState.xcuserstate
reference/matlab/matlab.xcodeproj/xcuserdata/nicolls.xcuserdatad/xcschemes/: matlab copy.xcscheme  matlab.xcscheme  xcschememanagement.plist
reference/src/: earth.c  earth.h
reference/src/R/: README.txt  dqrdc2.c
reference/src/blas/: README.txt  daxpy.c  dcopy.c  ddot.c  dnrm2.c  dqrls.c  dqrsl.c  dscal.c  dtrsl.c  f2c.h
report/: rank1_problem.fdb_latexmk  rank1_problem.fls  rank1_problem.tex
results/: speeds_basis.txt  speeds_cholesky.txt  speeds_covariance_update.txt  speeds_data_matrix.txt  speeds_decompose_addition.txt  speeds_find_bases.txt  speeds_full.txt  speeds_update_cholesky.txt  speeds_update_covariance_matrix.txt  speeds_update_init.txt
src/: build_fortran_backend.sh  fortran_backend.f90  numba_regression.py  omars.py  regression.py  regression_noop.py  regression_numba.py  utils.py  visualization.py
src/fortran/: build.sh  cholesky_update.f90  data_matrix.f90  omars.f90  test_find_bases  test_find_bases.f90
src/omars/: regression.py  utils.py  visualization.py
test/: simulated_test.py
tests/: fit_test.py  simulated_test.py  speed_test.py  speed_test_fortran.py  speed_test_noop.py  speed_test_numba.py  suites.py  system_test.py  unit_test.py  unit_test_fortran.py  unit_test_noop.py  unit_test_numba.py  utils.py
