[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.17.1",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "numba>=0.61.0",
    "jaxtyping>=0.2.36",
    "beartype>=0.19.0",
    "matplotlib>=3.8.3",
    "scipy>=1.14.0",
    "numba>=0.61.0"
]


[project]
name = "omar"
version = "0.0.1"
authors = [
  { name="Tim Walter", email="tim.walter@tum.de" },
]
description = "Open Multivariate Adaptive Regression"
readme = "README.md"
license = {file = 'LICENSE.txt'}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3 :: Only',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

[project.urls]
Homepage = "https://github.com/Helge-Stein-Group/OMAR"
Issues = "https://github.com/Helge-Stein-Group/OMAR/issues"

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = "cp36-* cp37-* cp-38* pp37-* *-manylinux_i686 *_ppc64le *_s390x *_universal2 *-musllinux*  *-win32 "

[tool.cibuildwheel.linux]
before-all = "yum -y update && yum -y install blas-devel lapack-devel freetype-devel"
before-test = "yum -y update && yum -y install openblas-devel lapack freetype && pip install packaging"